--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
     <header>
         <h1>Danicas's site</h1>
         <nav>
-            <a href="#about">About me</a>
-            <a href="#skills">Skills</a>
+            <a href="#kontakt">Kontakt</a>
+            <a href="#biographie">Biographie</a>
         </nav>
     </header>
+
+    <main>
+        <section id="private">
+        <img src="" alt="">
+<!-- Hier die Tags einbauen-->
+
+    </main>
+</body>
+
 </body>
 </html>
