--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Danicas's site</h1>
+        <h1>Danicas's Site</h1>
         <nav>
             <a href="#kontakt">Kontakt</a>
             <a href="#biographie">Biographie</a>
@@ -18,8 +18,13 @@
     <main>
         <section id="private">
         <img src="" alt="">
-<!-- Hier die Tags einbauen-->
+        <p>Adobe Photoshop InDesign Testmanagement HTML</p>
+        </section>
 
+        <sektion id="kontact">
+        <p>Telefon: 01523/ 12 34 56</p>
+        <p>Mail: Danica.Dombek@gmx.de</p>
+        </sektion>
     </main>
 </body>
 
