--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     <main>
         <section id="private">
         <img src="" alt="">
+        <h2>Fähigkeiten/ Interessen</h2>
         <p>Adobe Photoshop InDesign Testmanagement HTML</p>
         </section>
 
         <sektion id="kontact">
+        <h2>Kontakt</h2>
         <p>Telefon: 01523/ 12 34 56</p>
         <p>Mail: Danica.Dombek@gmx.de</p>
         </sektion>
