--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <h1>Danicas's Site</h1>
         <nav>
+            <p>Name: Danica Dombek</p>
             <a href="#kontakt">Kontakt</a>
             <a href="#biographie">Biographie</a>
         </nav>
