Add image and text to index

--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
 
     <main>
         <section id="private">
-        <img src="" alt="">
+        <img src="./images/dd-site.jpg" alt="Danica im Wald">
         <h2>Fähigkeiten/ Interessen</h2>
-        <p>Adobe Photoshop InDesign Testmanagement HTML</p>
+        <ul>
+        <li>Schreiben</li>
+        <li>Testmanagement</li>
+        <li>Mobile App-Testing</li>
+        <li>Photoshop</li>
+        <li>InDesign</li>
+        </ul>
         </section>
 
-        <sektion id="kontact">
+        <section id="kontakt">
         <h2>Kontakt</h2>
         <p>Telefon: 01523/ 12 34 56</p>
         <p>Mail: Danica.Dombek@gmx.de</p>
