New page  with section social

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <nav>
             <p>Name: Danica Dombek</p>
             <a href="#kontakt">Kontakt</a>
-            <a href="#biographie">Biographie</a>
+            <a href="biographie.html">Biographie</a>
         </nav>
     </header>
 
     <main>
         <section id="private">
-        <img src="./images/dd-site.jpg" alt="Danica im Wald">
+        <img src="./images/dd-site.jpg" alt="Entschleunigen im Wald">
         <h2>Fähigkeiten/ Interessen</h2>
         <ul>
         <li>Schreiben</li>
@@ -35,7 +35,6 @@
         <p>Mail: Danica.Dombek@gmx.de</p>
         </sektion>
     </main>
-</body>
 
 </body>
 </html>
