--- a/biographie.html
+++ b/biographie.html
@@ -9,11 +9,20 @@
 <body>
     <main>
         <section id="social">
-        <a href="https://codepen.io/DanicaD"><img src="./images/logos/codepen-logo.png" alt="CodePen Logo"></a>
-        <a href="https://github.com/danicadombek"><img src="./images/logos/github-logo.png" alt="Github Logo"></a>
-        <a href="https://www.linkedin.com/in/danica-dombek-b80375161/"><img src="./images/logos/linkedin-logo.png" alt="CodePen Logo"></a>
+        <!--bulletpoints entfernen-->
+        <ul>
+        <li><a href="https://codepen.io/DanicaD"><img src="./images/logos/codepen-logo.png" alt="CodePen Logo"></a></li>
+        <li><a href="https://github.com/danicadombek"><img src="./images/logos/github-logo.png" alt="Github Logo"></a></li>
+        <li><a href="https://www.linkedin.com/in/danica-dombek-b80375161/"><img src="./images/logos/linkedin-logo.png" alt="CodePen Logo"></a></li>
+        </ul>    
+        </section>
+
+        <section id="aboutme">
+        <h2>Was lange währt, wird endlich..</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, quibusdam. Suscipit facere, maiores vitae omnis consectetur eos sit. Laboriosam, excepturi commodi nemo eligendi ab consequuntur officiis labore quo perferendis numquam.</p>
         </section>
     </main>
-    
+    <a href="index.html">Zurück zur Startseite</a>
+    <a href="cv.html">Weiter zum CV</a>
 </body>
 </html>
