--- a/biographie.html
+++ b/biographie.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <section id="social">
-        <!--bulletpoints entfernen-->
+        <!--bulletpoints mit CSS entfernen-->
         <ul>
         <li><a href="https://codepen.io/DanicaD"><img src="./images/logos/codepen-logo.png" alt="CodePen Logo"></a></li>
         <li><a href="https://github.com/danicadombek"><img src="./images/logos/github-logo.png" alt="Github Logo"></a></li>
@@ -22,7 +22,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, quibusdam. Suscipit facere, maiores vitae omnis consectetur eos sit. Laboriosam, excepturi commodi nemo eligendi ab consequuntur officiis labore quo perferendis numquam.</p>
         </section>
     </main>
-    <a href="index.html">Zurück zur Startseite</a>
+    <a href="index.html">Zur Startseite</a>
     <a href="cv.html">Weiter zum CV</a>
 </body>
 </html>
