--- a/cv.html
+++ b/cv.html
@@ -13,6 +13,7 @@
         </section>
 
         <section id="cv">
+        <h1>CV</h1>
         <table>
             <tr>
                 <td>Ausbildungen:</td>
@@ -31,6 +32,13 @@
             </tr>
         </table>
         </section>
+
+        <footer>
+            <h2>Impressum</h2>
+            <p>Copyright by Danica Dombek</p>
+            <a href="biographie.html">Zurück</a>
+            <a href="index.html">Zur Startseite</a>
+        </footer>
     </main>
     
 </body>
