--- a/cv.html
+++ b/cv.html
@@ -14,21 +14,26 @@
 
         <section id="cv">
         <h1>CV</h1>
-        <table>
+        <table border="1">
             <tr>
                 <td>Ausbildungen:</td>
                 <td>Veranstaltungskauffrau</td>
                 <td>Assistentin für Screen Design</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>08/2014-12/2020</td>
+                <td>Kundenbetreuerin</td>
+                <td>TKgesundheit GmbH</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>- externes Projekt (2 Jahre)</td>
+                <td>Mobile App Tester</td>
+                <td>Die Techniker</td>
+            </tr>
+            <tr>
+                <td>12/2008-06/2011</td>
+                <td>TV-Redakteurin</td>
+                <td>Schwartzkopff TV</td>
             </tr>
         </table>
         </section>
