Subscription for the index-image

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <header>
         <h1>Danicas's Site</h1>
         <nav>
-            <p>Name: Danica Dombek</p>
-            <a href="#kontakt">Kontakt</a>
-            <a href="biographie.html">Biographie</a>
+        <p>Name: Danica Dombek</p>
+        <a href="#kontakt">Kontakt</a>
+        <a href="biographie.html">Biographie</a>
         </nav>
     </header>
 
     <main>
         <section id="private">
-        <img src="./images/dd-site.jpg" alt="Entschleunigen im Wald">
+        <img src="./images/dd-site.jpg" alt="">
+        <figcaption>Entschleunigen in der Natur.</figcaption>
         <h2>Fähigkeiten/ Interessen</h2>
         <ul>
         <li>Schreiben</li>
