--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet">
     <title>Personal Website</title>
   </head>
   <body>
@@ -80,8 +81,9 @@
               </tr>
             </table>
           </section>
-          
+
     </main>
+    
     <footer>
         <h3>Impressum</h3>
         Copyright by Danica Dombek</br>
