Correct width-size and header

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h1>Danicas Dombek</h1>
       Name: Danica Dombek
       <nav>
-        <a href="#kontakt">Kontakt</a>
-        <a href="#biographie">Biographie</a>
+        <a href="#kontakt" class="navi-buttons">Kontakt</a>
+        <a href="#biographie" class="navi-buttons">Biographie</a>
       </nav>
     </header>
 
@@ -59,7 +59,7 @@
         </address>
       </section>
       
-      <section>
+      <section class="social-media">
         <ul>
         <li><img src="./images/logos/codepen.png" alt="CodePen" width="130px"><a href="https://codepen.io/DanicaD" rel="noopener noreferrer" target="_blank" class="links-normal">Besuche mich gerne auf CodePen</a></li>
         <li><img src="./images/logos/github.png" alt="Github" width="160px"><a href="https://github.com/danicadombek" rel="noopener noreferrer" target="_blank" class="links-normal">Github habe ich natürlich auch</a></li>
