Style for text and h2

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   </head>
   <body>
     <header>
-      <h1>Danicas Dombek</h1>
-      Name: Danica Dombek
+      <h1>Danica Dombek</h1>
       <nav>
         <a href="#kontakt" class="navi-buttons">Kontakt</a>
         <a href="#biographie" class="navi-buttons">Biographie</a>
@@ -54,23 +53,23 @@
       <section id="kontakt">
         <h2>Kontakt</h2>
         <address>
-          <a href="tel:+4915236420470" class="links-normal">Telefon: 01523/ 64 20 470</a><br />
-          <a href="mailto:danica.dombek@gmx.de" class="links-normal">Mail: Danica.Dombek@gmx.de</a>
+          <a href="tel:+4915236420470" class="links-kontakt">Telefon: 01523/ 64 20 470</a><br />
+          <a href="mailto:danica.dombek@gmx.de" class="links-kontakt">Mail: Danica.Dombek@gmx.de</a>
         </address>
       </section>
       
       <section class="social-media">
         <ul>
-        <li><img src="./images/logos/codepen.png" alt="CodePen" width="130px"><a href="https://codepen.io/DanicaD" rel="noopener noreferrer" target="_blank" class="links-normal">Besuche mich gerne auf CodePen</a></li>
-        <li><img src="./images/logos/github.png" alt="Github" width="160px"><a href="https://github.com/danicadombek" rel="noopener noreferrer" target="_blank" class="links-normal">Github habe ich natürlich auch</a></li>
-        <li><img src="./images/logos/linkedin.png" alt="Linkedin" width="100px"><a href="https://www.linkedin.com/in/danica-dombek-b80375161/" rel="noopener noreferrer" target="_blank" class="links-normal">Oder gehe auf mein Linkedin-Profil</a></li>
-        <li><img src="./images/logos/xing.png" alt="Xing" width="100px"><a href="https://www.xing.com/profile/Danica_Dombek/cv" rel="noopener noreferrer" target="_blank" class="links-normal">Lieber Xing?</a></li>       
+        <li><img src="./images/logos/codepen.png" alt="CodePen" width="130px"></li>
+        <li><img src="./images/logos/github.png" alt="Github" width="160px"></li>
+        <li><img src="./images/logos/linkedin.png" alt="Linkedin" width="100px"></li>
+        <li><img src="./images/logos/xing.png" alt="Xing" width="100px"></li>       
         </ul>    
         </section>
 
         <section id="biographie">
-        <h2>Der Weg ist das Ziel</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium,
+        <h2>Biographie</h2>
+            <p class="biographie-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium,
               ipsam a nobis dolores vero voluptatum recusandae, atque ut provident
               mollitia nisi doloribus dolore? Voluptas obcaecati doloribus,
               laudantium veritatis iusto ea.
@@ -82,7 +81,7 @@
             <dl>
                 <dt>08/2014-12/2020</dt>
                 <dd><b>Kundenbetreuerin, TKgesundheit GmbH</b></dd>
-                <dt>- externes Projektn (Zwei Jahre)</dt>
+                <dt>- externes Projekt (zwei Jahre)</dt>
                 <dd><b>Mobile App Tester</b></dd>
                 <dt>2/2008-06/2011</dt>
                 <dd><b>TV-Redakteurin, Schwartzkopff TV</b></dd>
