Change style of cv-content

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
           <section class="cv">
             <h2>CV</h2>
             <dl>
-                <dt>08/2014-12/2020</dt>
-                <dd><b>Kundenbetreuerin, TKgesundheit GmbH</b></dd>
-                <dt>- externes Projekt (zwei Jahre)</dt>
-                <dd><b>Mobile App Tester</b></dd>
-                <dt>2/2008-06/2011</dt>
-                <dd><b>TV-Redakteurin, Schwartzkopff TV</b></dd>
+                <dt class="cv-dates">08/2014 - 12/2020</dt>
+                <dd class="cv-content">Kundenbetreuerin, TKgesundheit GmbH</dd>
+                <dt class="cv-dates">- externes Projekt (zwei Jahre)</dt>
+                <dd class="cv-content">Mobile App Tester</dd>
+                <dt class="cv-dates">02/2008 - 06/2011</dt>
+                <dd class="cv-content">TV-Redakteurin, Schwartzkopff TV</dd>
             </dl>
           </section>
 
