Refresh style and add links to logos

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet"> 
-    <title>Personal Website</title>
+    <title>Danicas Website</title>
   </head>
   <body>
     <header>
@@ -79,11 +79,11 @@
       <section class="standard-margin">
         <h2>Social Media</h2>
         <ul class="social-media">
-        <li><img src="./images/logos/codepen.png" alt="CodePen" class="img-logos"></li>
-        <li><img src="./images/logos/github.png" alt="Github" class="img-logos"></li>
-        <li><img src="./images/logos/linkedin.png" alt="Linkedin" class="img-logos"></li>
-        <li><img src="./images/logos/xing.png" alt="Xing" class="img-logos"></li>       
-        </ul>    
+        <li><a href="https://codepen.io/DanicaD" rel="noopener noreferrer" target="_blank"><img src="./images/logos/codepen.png" alt="CodePen" class="img-logos"></a></li>
+        <li><a href="https://github.com/danicadombek" rel="noopener noreferrer" target="_blank"><img src="./images/logos/github.png" alt="Github" class="img-logos"></a></li>
+        <li><a href="https://www.linkedin.com/in/danica-dombek-b80375161/" rel="noopener noreferrer" target="_blank"><img src="./images/logos/linkedin.png" alt="Linkedin" class="img-logos"></a></li>
+        <li><a href="https://www.xing.com/profile/Danica_Dombek/cv" rel="noopener noreferrer" target="_blank"><img src="./images/logos/xing.png" alt="Xing" class="img-logos"></a></li>       
+        </ul>     
         </section>
       
         <section id="kontakt" class="content-color">
