Change the color of the dark content

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         <section id="kontakt" class="content-color">
         <h2 class="content-headline">Kontakt</h2>
         <address>
-          <div class="contact-flex"><img src="images/telefon.png" alt="" class="contact-icons"><a href="tel:+4915236420470" class="links-kontakt">01523/ 64 20 470</a><br /></div>
-          <div class="contact-flex"><img src="images/mail.png" alt="" class="contact-icons"><a href="mailto:danica.dombek@gmx.de" class="links-kontakt">Danica.Dombek@gmx.de</a></div>
+          <div class="contact-flex"><img src="images/telefon.png" alt="" class="contact-icons"><a href="tel:+4915236420470" class="contact-links">01523/ 64 20 470</a><br /></div>
+          <div class="contact-flex"><img src="images/mail.png" alt="" class="contact-icons"><a href="mailto:danica.dombek@gmx.de" class="contact-links">Danica.Dombek@gmx.de</a></div>
         </address>
       </section>
 
