--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
   </head>
   <body>
     <header>
-      <h1>Danica Dombek</h1>
+      <h1 id="top">Danica Dombek</h1>
       <nav>
         <a href="#kontakt" class="navi-buttons">Kontakt</a>
         <a href="#biographie" class="navi-buttons">Biographie</a>
       </nav>
+    </section>
     </header>
 
     <main>
@@ -74,20 +75,19 @@
             </dl>
           </section>
 
-    </main>
-    
-    <footer>
+          <section class="standard-margin">
+            <h2>Social Media</h2>
+            <ul class="social-media">
+            <li><a href="https://codepen.io/DanicaD" rel="noopener noreferrer" target="_blank"><img src="./images/logos/codepen.png" alt="CodePen" class="img-logos"></a></li>
+            <li><a href="https://github.com/danicadombek" rel="noopener noreferrer" target="_blank"><img src="./images/logos/github.png" alt="Github" class="img-logos"></a></li>
+            <li><a href="https://www.linkedin.com/in/danica-dombek-b80375161/" rel="noopener noreferrer" target="_blank"><img src="./images/logos/linkedin.png" alt="Linkedin" class="img-logos"></a></li>
+            <li><a href="https://www.xing.com/profile/Danica_Dombek/cv" rel="noopener noreferrer" target="_blank"><img src="./images/logos/xing.png" alt="Xing" class="img-logos"></a></li>       
+            </ul>     
+            </section>
 
-      <section class="standard-margin">
-        <h2>Social Media</h2>
-        <ul class="social-media">
-        <li><a href="https://codepen.io/DanicaD" rel="noopener noreferrer" target="_blank"><img src="./images/logos/codepen.png" alt="CodePen" class="img-logos"></a></li>
-        <li><a href="https://github.com/danicadombek" rel="noopener noreferrer" target="_blank"><img src="./images/logos/github.png" alt="Github" class="img-logos"></a></li>
-        <li><a href="https://www.linkedin.com/in/danica-dombek-b80375161/" rel="noopener noreferrer" target="_blank"><img src="./images/logos/linkedin.png" alt="Linkedin" class="img-logos"></a></li>
-        <li><a href="https://www.xing.com/profile/Danica_Dombek/cv" rel="noopener noreferrer" target="_blank"><img src="./images/logos/xing.png" alt="Xing" class="img-logos"></a></li>       
-        </ul>     
-        </section>
-      
+    </main>
+  
+    <footer>
         <section id="kontakt" class="content-color">
         <h2 class="content-headline">Kontakt</h2>
         <address>
@@ -96,8 +96,11 @@
         </address>
       </section>
 
+        <div class="footer-flex">
         <h3 class="impressum">Impressum</h3>
         <div class="copyright">Copyright by Danica Dombek</div>
+        <a href="#top" alt=""><img src="images/pfeil.png" alt="" class="back-top"></a>
+      </div>
       </footer>
   </body>
 </html>
