--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <title>Danicas Website</title>
   </head>
   <body>
-    <header>
-      <h1 id="top">Danica Dombek</h1>
+    <header id="top">
+      <h1>Danica Dombek</h1>
       <nav>
         <a href="#kontakt" class="navi-buttons">Kontakt</a>
         <a href="#biographie" class="navi-buttons">Biographie</a>
@@ -36,7 +36,7 @@
           <li>InDesign</li>
           <li>HTML</li>
           <li>Texten</li>
-            </ul>
+          </ul>
           </div>
 
         <div class="flex-margin">
@@ -56,15 +56,33 @@
  
     <section id="biographie" class="standard-margin border-top">
       <h2>Biographie</h2>
-          <p class="biographie-text">Geboren 1982 in Hamburg
+          <p class="biographie-text">Im Jahre 1982 kam ich als echtes Nordlicht in Hamburg zur Welt. Beruflich zog es mich 
+            früh in den Medienbereich, wo ich letztendlich als TV-Redakteurin tätig war. Durch die branchentypische Unbeständigkeit 
+            entschied ich mich schweren Herzens für eine Umschulung zur Veranstaltungskauffrau und arbeitete 
+            danach länger als geplant als Sachbearbeiterin.
+          </p>
+            <p class="biographie-text">Dank eines Zufalles namens "Unternehmensausleihe" wurde ich insgesamt zwei Jahre 
+            bei der "TK" als Mobile App-Testerin eingesetzt. Dort bin ich den 
+            Programmierfehlern der Entwickler auf die Schliche und generell der Materie Softwareentwicklung nahe gekommen. 
+            </p>
+          <p class="biographie-text">Als ich 2020 von dem Bootcamp zum Webdevelopment erfuhr, wunderte ich mich, dass 
+            ich diesen Bereich nicht schon früher in Betracht gezogen hatte. Schließlich erlangte ich bereits eine minimale 
+            Grundbasis als gelernte Assistentin für Screen Design und erinnere mich sehr gerne daran zurück.
+          </p>
+        <p class="biographie-text">Weil der Wunsch nach einer beruflichen Veränderung ins Unermäßliche gestiegen war, 
+          wage ich hocherfreut den Sprung in die Webentwicklung, in der ich nun duaerhaft Fuss fassen werde.
+        </p>
           </p>
         </section>
     
           <section class="cv standard-margin border-bottom">
             <h2 class="content-headline">CV</h2>
             <dl>
+                <dt class="cv-dates">seit 04/2020</dt>
+                <dd class="cv-content">Webdevelopment (Bootcamp), neuefische</dd>
+                <br>
                 <dt class="cv-dates">08/2014 - 12/2020</dt>
-                <dd class="cv-content">Kundenbetreuerin, TKgesundheit GmbH</dd>
+                <dd class="cv-content">Sachbearbeiterin, TKgesundheit GmbH</dd>
                 <br>
                 <dt class="cv-dates">- externes Projekt (zwei Jahre)</dt>
                 <dd class="cv-content">Mobile App Tester, TK</dd>
@@ -82,7 +100,7 @@
                 <dd class="cv-content">Assistentin für Screen Design (Ausbildung), Berufl. Schule Steinhauerdamm</dd>
                 <br>
                 <dt class="cv-dates">05/2003 - 05/2004</dt>
-                <dd class="cv-content">Fotografin (Praktikum), FotoPress FPI</dd>
+                <dd class="cv-content">Fotografin (Praktikum), Foto Press FPI</dd>
                 <br>
                 <dt class="cv-dates">03/2002 - 09/2002</dt>
                 <dd class="cv-content">Redakteurin (Praktikum), piste Hamburg</dd>
