--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </section>
 
           <section class="standard-margin">
-            <h2>Social Media</h2>
+            <h2>Meet me</h2>
             <ul class="social-media">
             <li><a href="https://codepen.io/DanicaD" rel="noopener noreferrer" target="_blank"><img src="./images/logos/codepen.png" alt="CodePen" class="img-logos"></a></li>
             <li><a href="https://github.com/danicadombek" rel="noopener noreferrer" target="_blank"><img src="./images/logos/github.png" alt="Github" class="img-logos"></a></li>
