Change navi-buttons and  add arrow-flex

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header id="top">
       <h1>Danica Dombek</h1>
       <nav>
-        <a href="#kontakt" class="navi-buttons">Kontakt</a>
         <a href="#biographie" class="navi-buttons">Biographie</a>
+        <a href="#kontakt" class="navi-buttons">Kontakt</a>
       </nav>
     </section>
     </header>
@@ -70,7 +70,7 @@
             Grundbasis als gelernte Assistentin für Screen Design und erinnere mich sehr gerne daran zurück.
           </p>
         <p class="biographie-text">Weil der Wunsch nach einer beruflichen Veränderung ins Unermäßliche gestiegen war, 
-          wage ich hocherfreut den Sprung in die Webentwicklung, in der ich nun duaerhaft Fuss fassen werde.
+          wage ich hocherfreut den Sprung in die Webentwicklung, in der ich nun dauerhaft Fuss fassen werde.
         </p>
           </p>
         </section>
@@ -85,7 +85,7 @@
                 <dd class="cv-content">Sachbearbeiterin, TKgesundheit GmbH</dd>
                 <br>
                 <dt class="cv-dates">- externes Projekt (zwei Jahre)</dt>
-                <dd class="cv-content">Mobile App Tester, TK</dd>
+                <dd class="cv-content">Mobile App-Tester, TK</dd>
                 <br>
                 <dt class="cv-dates">09/2011 - 05/2013</dt>
                 <dd class="cv-content">Veranstaltungskauffrau (Umschulung), DAA</dd>
@@ -120,7 +120,7 @@
     </main>
   
     <footer>
-        <section id="kontakt" class="content-color">
+        <section id="kontakt" class="content-color standard-margin">
         <h2 class="content-headline">Kontakt</h2>
         <address>
           <div class="contact-flex"><img src="images/telefon.png" alt="" class="contact-icons"><a href="tel:+4915236420470" class="contact-links">01523/ 64 20 470</a><br /></div>
@@ -129,9 +129,11 @@
       </section>
 
         <h3 class="impressum">Impressum</h3>
+        <div class="arrow-flex">
         <div class="copyright">Copyright by Danica Dombek</div>
-        <div class="pfeil-rechts"><a href="#top" alt=""><img src="images/arrow.png" alt="" class="back-top"></a>
+        <div><a href="#top" alt=""><img src="images/arrow.png" alt="" class="back-top"></a>
       </div>
+    </div>
       </footer>
   </body>
 </html>
