Fill skills and interests

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <li>Photoshop</li>
           <li>InDesign</li>
           <li>HTML</li>
+          <li>CSS</li>
           <li>Texten</li>
           </ul>
           </div>
@@ -42,10 +43,13 @@
         <div class="flex-margin">
           <h2>Interessen</h2>
           <ul>
+          <li>Reisen</li>
           <li>Schreiben</li>
           <li>Lesen</li>
           <li>Kochen</li>
-          <li>Natur</li>
+          <li>Natur/ Tiere</li>
+          <li>Familie/ Freunde</li>
+
         </ul>
       </div>
 
@@ -63,14 +67,14 @@
           </p>
             <p class="biographie-text">Dank eines Zufalles namens "Unternehmensausleihe" wurde ich insgesamt zwei Jahre 
             bei der "TK" als Mobile App-Testerin eingesetzt. Dort bin ich den 
-            Programmierfehlern der Entwickler auf die Schliche und generell der Materie Softwareentwicklung nahe gekommen. 
+            Programmierfehlern der Entwickler auf die Schliche und der Materie Softwareentwicklung näher gekommen. 
             </p>
-          <p class="biographie-text">Als ich 2020 von dem Bootcamp zum Webdevelopment erfuhr, wunderte ich mich, dass 
+          <p class="biographie-text">Als ich 2020 von dem Bootcamp für Webdevelopment erfuhr, wunderte ich mich, dass 
             ich diesen Bereich nicht schon früher in Betracht gezogen hatte. Schließlich erlangte ich bereits eine minimale 
             Grundbasis als gelernte Assistentin für Screen Design und erinnere mich sehr gerne daran zurück.
           </p>
         <p class="biographie-text">Weil der Wunsch nach einer beruflichen Veränderung ins Unermäßliche gestiegen war, 
-          wage ich hocherfreut den Sprung in die Webentwicklung, in der ich nun dauerhaft Fuss fassen werde.
+          wage ich nun hocherfreut den Sprung in die Webentwicklung, in der ich dauerhaft Fuss fassen möchte.
         </p>
           </p>
         </section>
@@ -108,7 +112,7 @@
           </section>
 
           <section class="standard-margin">
-            <h2>Meet me</h2>
+            <h2>Social Media</h2>
             <ul class="social-media">
             <li><a href="https://codepen.io/DanicaD" rel="noopener noreferrer" target="_blank"><img src="./images/logos/codepen.png" alt="CodePen" class="img-logos"></a></li>
             <li><a href="https://github.com/danicadombek" rel="noopener noreferrer" target="_blank"><img src="./images/logos/github.png" alt="Github" class="img-logos"></a></li>
