Add image-style and figcaption to utility.css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
       
-        <img class="image-flex" src="images/dd-site.jpg" alt=""/>
+        <img class="img-fluid" src="images/dd-site.jpg" alt=""/>
         <figcaption>"Das Leben ist kurz." Seneca</figcaption>
         
         <section class="columns standard-margin">   
