Add new file list.css/ components;  headline-styles and standard-margin in utility.css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header id="top">
-      <h1>Danica Dombek</h1>
+      <h1 class="h1-50">Danica Dombek</h1>
       <nav>
         <a href="#biographie" class="navi-buttons">Biographie</a>
         <a href="#kontakt" class="navi-buttons">Kontakt</a>
@@ -26,9 +26,9 @@
         <img class="img-fluid" src="images/dd-site.jpg" alt=""/>
         <figcaption>"Das Leben ist kurz." Seneca</figcaption>
         
-        <section class="columns standard-margin">   
+        <section class="columns m-20">   
         <div>
-          <h2>Fähigkeiten</h2>
+          <h2 class="h2-18">Fähigkeiten</h2>
           <ul> 
           <li>Testmanagement</li>
           <li>Mobile App-Testing</li>
@@ -41,7 +41,7 @@
           </div>
 
         <div class="flex-margin">
-          <h2>Interessen</h2>
+          <h2 class="h2-18">Interessen</h2>
           <ul>
           <li>Reisen</li>
           <li>Schreiben</li>
@@ -58,8 +58,8 @@
       </section>
     </section>
  
-    <section id="biographie" class="standard-margin border-top">
-      <h2>Biographie</h2>
+    <section id="biographie" class="m-20 border-top">
+      <h2 class="h2-18">Biographie</h2>
           <p class="biographie-text">Im Jahre 1982 kam ich als echtes Nordlicht in Hamburg zur Welt. Beruflich zog es mich 
             früh in den Medienbereich, wo ich letztendlich als TV-Redakteurin tätig war. Durch die branchentypische Unbeständigkeit 
             entschied ich mich schweren Herzens für eine Umschulung zur Veranstaltungskauffrau und arbeitete 
@@ -79,8 +79,8 @@
           </p>
         </section>
     
-          <section class="cv standard-margin border-bottom">
-            <h2 class="content-headline">CV</h2>
+          <section class="cv m-20 border-bottom">
+            <h2 class="content-headline h2-18">CV</h2>
             <dl>
                 <dt class="cv-dates">seit 04/2020</dt>
                 <dd class="cv-content">Webdevelopment (Bootcamp), neuefische</dd>
@@ -111,8 +111,8 @@
             </dl>
           </section>
 
-          <section class="standard-margin">
-            <h2>Social Media</h2>
+          <section class="m-20">
+            <h2 class="h2-18">Social Media</h2>
             <ul class="social-media">
             <li><a href="https://codepen.io/DanicaD" rel="noopener noreferrer" target="_blank"><img src="./images/logos/codepen.png" alt="CodePen" class="img-logos"></a></li>
             <li><a href="https://github.com/danicadombek" rel="noopener noreferrer" target="_blank"><img src="./images/logos/github.png" alt="Github" class="img-logos"></a></li>
@@ -125,7 +125,7 @@
   
     <footer>
         <section id="kontakt" class="content-color standard-margin">
-        <h2 class="content-headline">Kontakt</h2>
+        <h2 class="content-headline h2-18">Kontakt</h2>
         <address>
           <div class="contact-flex"><img src="images/telefon.png" alt="" class="contact-icons"><a href="tel:+4915236420470" class="contact-links">01523/ 64 20 470</a><br /></div>
           <div class="contact-flex"><img src="images/mail.png" alt="" class="contact-icons"><a href="mailto:danica.dombek@gmx.de" class="contact-links">Danica.Dombek@gmx.de</a></div>
