Finish the components with footer.css

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </main>
   
     <footer>
-        <section id="kontakt" class="content-color standard-margin">
+        <section id="kontakt" class="content-color m-20">
         <h2 class="content-headline h2-18">Kontakt</h2>
         <address>
           <div class="contact-flex"><img src="images/telefon.png" alt="" class="contact-icons"><a href="tel:+4915236420470" class="contact-links">01523/ 64 20 470</a><br /></div>
