--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     </section>
     </header>
 
-    <main>
-      
+    <main>   
         <img class="img-fluid" src="images/dd-site.jpg" alt=""/>
         <figcaption>"Das Leben ist kurz." Seneca</figcaption>
         
@@ -57,22 +56,22 @@
       </section>
     </section>
  
-    <section id="biographie" class="m-20 border-top">
-      <h2 class="h2-18">Biographie</h2>
-          <p class="biographie-text">Im Jahre 1982 kam ich als echtes Nordlicht in Hamburg zur Welt. Beruflich zog es mich 
+    <section class="bio bio__border bio__margin">
+      <h2 class="bio__headline">Biographie</h2>
+          <p class="bio__text">Im Jahre 1982 kam ich als echtes Nordlicht in Hamburg zur Welt. Beruflich zog es mich 
             früh in den Medienbereich, wo ich letztendlich als TV-Redakteurin tätig war. Durch die branchentypische Unbeständigkeit 
             entschied ich mich schweren Herzens für eine Umschulung zur Veranstaltungskauffrau und arbeitete 
             danach länger als geplant als Sachbearbeiterin.
           </p>
-            <p class="biographie-text">Dank eines Zufalles namens "Unternehmensausleihe" wurde ich insgesamt zwei Jahre 
+            <p class="bio__text">Dank eines Zufalles namens "Unternehmensausleihe" wurde ich insgesamt zwei Jahre 
             bei der "TK" als Mobile App-Testerin eingesetzt. Dort bin ich den 
             Programmierfehlern der Entwickler auf die Schliche und der Materie Softwareentwicklung näher gekommen. 
             </p>
-          <p class="biographie-text">Als ich 2020 von dem Bootcamp für Webdevelopment erfuhr, wunderte ich mich, dass 
+          <p class="bio__text">Als ich 2020 von dem Bootcamp für Webdevelopment erfuhr, wunderte ich mich, dass 
             ich diesen Bereich nicht schon früher in Betracht gezogen hatte. Schließlich erlangte ich bereits eine minimale 
             Grundbasis als gelernte Assistentin für Screen Design und erinnere mich sehr gerne daran zurück.
           </p>
-        <p class="biographie-text">Weil der Wunsch nach einer beruflichen Veränderung ins Unermäßliche gestiegen war, 
+        <p class="bio__text">Weil der Wunsch nach einer beruflichen Veränderung ins Unermäßliche gestiegen war, 
           wage ich nun hocherfreut den Sprung in die Webentwicklung, in der ich dauerhaft Fuss fassen möchte.
         </p>
           </p>
