--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </section>
     
           <section class="cv m-20 border-bottom">
-            <h2 class="content-headline h2-18">CV</h2>
+            <h2 class="">CV</h2>
             <dl>
                 <dt class="cv-dates">seit 04/2020</dt>
                 <dd class="cv-content">Webdevelopment (Bootcamp), neuefische</dd>
@@ -120,20 +120,20 @@
             </section>
 
     </main>
-  
-    <footer>
-        <section id="kontakt" class="content-color m-20">
-        <h2 class="content-headline h2-18">Kontakt</h2>
+
+    <footer class="footer">
+        <section id="kontakt" class="footer__bg">
+        <h2 class="footer__headline-kontakt footer__h2">Kontakt</h2>   
         <address>
-          <div class="contact-flex"><img src="images/telefon.png" alt="" class="contact-icons"><a href="tel:+4915236420470" class="contact-links">01523/ 64 20 470</a><br /></div>
-          <div class="contact-flex"><img src="images/mail.png" alt="" class="contact-icons"><a href="mailto:danica.dombek@gmx.de" class="contact-links">Danica.Dombek@gmx.de</a></div>
+          <div class="footer__contact-flex"><img src="images/telefon.png" alt="" class="footer__contact-icons"><a href="tel:+4915236420470" class="footer__contact-links">01523/ 64 20 470</a><br /></div>
+          <div class="footer__contact-flex"><img src="images/mail.png" alt="" class="footer__contact-icons"><a href="mailto:danica.dombek@gmx.de" class="footer__contact-links">Danica.Dombek@gmx.de</a></div>
         </address>
       </section>
 
-        <h3 class="impressum">Impressum</h3>
-        <div class="arrow-flex">
-        <div class="copyright">Copyright by Danica Dombek</div>
-        <div><a href="#top" alt=""><img src="images/arrow.png" alt="" class="back-top"></a>
+        <h3 class="footer__impressum-h3">Impressum</h3>
+        <div class="footer__arrow-flex">
+        <div class="footer__copyright">Copyright by Danica Dombek</div>
+        <div><a href="#top" alt=""><img src="images/arrow.png" alt="" class="footer__back-top"></a>
       </div>
     </div>
       </footer>
