Component header to bem

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <title>Danicas Website</title>
   </head>
   <body>
-    <header id="top">
-      <h1 class="h1-50">Danica Dombek</h1>
-      <nav>
-        <a href="#biographie" class="navi-buttons">Biographie</a>
-        <a href="#kontakt" class="navi-buttons">Kontakt</a>
+    <header id="top" class="header">
+      <h1 class="header__h1">Danica Dombek</h1>
+      <nav class="header__nav">
+        <a href="#biographie" class="header__navi-buttons">Biographie</a>
+        <a href="#kontakt" class="header__navi-buttons">Kontakt</a>
       </nav>
     </section>
     </header>
