--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
         <img class="img-fluid" src="images/dd-site.jpg" alt=""/>
         <figcaption>"Das Leben ist kurz." Seneca</figcaption>
         
-        <section class="columns m-20">   
+        <!-- columns m-20" -->
+        <section class="cv cv__m-20">   
         <div>
-          <h2 class="h2-18">Fähigkeiten</h2>
+          <h2 class="cv__h2">Fähigkeiten</h2>
           <ul> 
           <li>Testmanagement</li>
           <li>Mobile App-Testing</li>
@@ -77,35 +78,35 @@
           </p>
         </section>
     
-          <section class="cv m-20 border-bottom">
-            <h2 class="">CV</h2>
+          <section class="cv cv__border-bottom">
+            <h2 class="cv__h2">CV</h2>
             <dl>
-                <dt class="cv-dates">seit 04/2020</dt>
-                <dd class="cv-content">Webdevelopment (Bootcamp), neuefische</dd>
+                <dt class="cv__dates">seit 04/2020</dt>
+                <dd class="cv__content">Webdevelopment (Bootcamp), neuefische</dd>
                 <br>
-                <dt class="cv-dates">08/2014 - 12/2020</dt>
-                <dd class="cv-content">Sachbearbeiterin, TKgesundheit GmbH</dd>
+                <dt class="cv__dates">08/2014 - 12/2020</dt>
+                <dd class="cv__content">Sachbearbeiterin, TKgesundheit GmbH</dd>
                 <br>
-                <dt class="cv-dates">- externes Projekt (zwei Jahre)</dt>
-                <dd class="cv-content">Mobile App-Tester, TK</dd>
+                <dt class="cv__dates">- externes Projekt (zwei Jahre)</dt>
+                <dd class="cv__content">Mobile App-Tester, TK</dd>
                 <br>
-                <dt class="cv-dates">09/2011 - 05/2013</dt>
-                <dd class="cv-content">Veranstaltungskauffrau (Umschulung), DAA</dd>
+                <dt class="cv__dates">09/2011 - 05/2013</dt>
+                <dd class="cv__content">Veranstaltungskauffrau (Umschulung), DAA</dd>
                 <br>
-                <dt class="cv-dates">02/2008 - 06/2011</dt>
-                <dd class="cv-content">TV-Redakteurin, Schwartzkopff TV</dd>
+                <dt class="cv__dates">02/2008 - 06/2011</dt>
+                <dd class="cv__content">TV-Redakteurin, Schwartzkopff TV</dd>
                 <br>
-                <dt class="cv-dates">07/2006 - 11/2008</dt>
-                <dd class="cv-content">Call Center-Agent, Teleperformance</dd>
+                <dt class="cv__dates">07/2006 - 11/2008</dt>
+                <dd class="cv__content">Call Center-Agent, Teleperformance</dd>
                 <br>
-                <dt class="cv-dates">08/2004 - 06/2006</dt>
-                <dd class="cv-content">Assistentin für Screen Design (Ausbildung), Berufl. Schule Steinhauerdamm</dd>
+                <dt class="cv__dates">08/2004 - 06/2006</dt>
+                <dd class="cv__content">Assistentin für Screen Design (Ausbildung), Berufl. Schule Steinhauerdamm</dd>
                 <br>
-                <dt class="cv-dates">05/2003 - 05/2004</dt>
-                <dd class="cv-content">Fotografin (Praktikum), Foto Press FPI</dd>
+                <dt class="cv__dates">05/2003 - 05/2004</dt>
+                <dd class="cv__content">Fotografin (Praktikum), Foto Press FPI</dd>
                 <br>
-                <dt class="cv-dates">03/2002 - 09/2002</dt>
-                <dd class="cv-content">Redakteurin (Praktikum), piste Hamburg</dd>
+                <dt class="cv__dates">03/2002 - 09/2002</dt>
+                <dd class="cv__content">Redakteurin (Praktikum), piste Hamburg</dd>
             </dl>
           </section>
 
