List-skills to bem

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <figcaption>"Das Leben ist kurz." Seneca</figcaption>
         
         <!-- columns m-20" -->
-        <section class="cv cv__m-20">   
+        <section class="skills skills__m-20 skills__columns">   
         <div>
-          <h2 class="cv__h2">Fähigkeiten</h2>
-          <ul> 
+          <h2 class="skills__h2">Fähigkeiten</h2>
+          <ul class="skills__ul"> 
           <li>Testmanagement</li>
           <li>Mobile App-Testing</li>
           <li>Photoshop</li>
@@ -40,9 +40,9 @@
           </ul>
           </div>
 
-        <div class="flex-margin">
-          <h2 class="h2-18">Interessen</h2>
-          <ul>
+        <div class="skills__flex-margin">
+          <h2 class="skills__h2">Interessen</h2>
+          <ul class="skills__ul">
           <li>Reisen</li>
           <li>Schreiben</li>
           <li>Lesen</li>
