--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <img class="img-fluid" src="images/dd-site.jpg" alt=""/>
         <figcaption>"Das Leben ist kurz." Seneca</figcaption>
         
-        <!-- columns m-20" -->
         <section class="skills skills__m-20 skills__columns">   
         <div>
           <h2 class="skills__h2">Fähigkeiten</h2>
@@ -109,14 +108,14 @@
                 <dd class="cv__content">Redakteurin (Praktikum), piste Hamburg</dd>
             </dl>
           </section>
-
-          <section class="m-20">
-            <h2 class="h2-18">Social Media</h2>
-            <ul class="social-media">
-            <li><a href="https://codepen.io/DanicaD" rel="noopener noreferrer" target="_blank"><img src="./images/logos/codepen.png" alt="CodePen" class="img-logos"></a></li>
-            <li><a href="https://github.com/danicadombek" rel="noopener noreferrer" target="_blank"><img src="./images/logos/github.png" alt="Github" class="img-logos"></a></li>
-            <li><a href="https://www.linkedin.com/in/danica-dombek-b80375161/" rel="noopener noreferrer" target="_blank"><img src="./images/logos/linkedin.png" alt="Linkedin" class="img-logos"></a></li>
-            <li><a href="https://www.xing.com/profile/Danica_Dombek/cv" rel="noopener noreferrer" target="_blank"><img src="./images/logos/xing.png" alt="Xing" class="img-logos"></a></li>       
+          <!-- m-20 -->
+          <section class="social">
+            <h2 class="social__h2">Social Media</h2>
+            <ul class="social__flex">
+            <li><a href="https://codepen.io/DanicaD" rel="noopener noreferrer" target="_blank"><img src="images/logos/codepen.png" alt="CodePen" class="social__logos"></a></li>
+            <li><a href="https://github.com/danicadombek" rel="noopener noreferrer" target="_blank"><img src="images/logos/github.png" alt="Github" class="social__logos"></a></li>
+            <li><a href="https://www.linkedin.com/in/danica-dombek-b80375161/" rel="noopener noreferrer" target="_blank"><img src="images/logos/linkedin.png" alt="Linkedin" class="social__logos"></a></li>
+            <li><a href="https://www.xing.com/profile/Danica_Dombek/cv" rel="noopener noreferrer" target="_blank"><img src="images/logos/xing.png" alt="Xing" class="social__logos"></a></li>       
             </ul>     
             </section>
 
